FN-1923 - fix: cell alignment, select all checkbox

--- a/src/assets/scss/angular.scss
+++ b/src/assets/scss/angular.scss
@@ -742,17 +742,29 @@ $evGRowSettingsWidth: 124px;
         font-weight: 400;
         line-height: $gRowHeight;
 
-        &.text-left {
-            text-align: left;
-        }
+		&.text-left {
+			text-align: left;
 
-        &.text-center {
-            text-align: center;
-        }
+			.g-cell-content {
+				justify-content: start;
+			}
+		}
 
-        &.text-right {
-            text-align: right;
-        }
+		&.text-center {
+			text-align: center;
+
+			.g-cell-content {
+				justify-content: center;
+			}
+		}
+
+		&.text-right {
+			text-align: right;
+
+			.g-cell-content {
+				justify-content: flex-end;
+			}
+		}
 
         &.negative-red {
             color: #fa393e;
